# Logger

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
cmake/: StandardProjectSettings.cmake  logger_lib-config.cmake.in
include/: logger_lib.hpp
include/logger/: common.hpp  compare_levels.hpp  err.hpp  formatter.hpp  logger_lib.hpp  sink.hpp
logger/: CMakeLists.txt
logger/include/: logger_lib.hpp
sample/: CMakeLists.txt  sample.cpp
test/: CMakeLists.txt
test/src/: test_common.cpp  test_formatter.cpp  test_sink.cpp
